cluster/x_archive/blog-test/blog-test-ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: blog-test-local-ingressroute
  namespace: blog-test
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`blog-test.${SECRET_DOMAIN_LOCAL_02}`)
      kind: Rule
      services:
        - name: wordpress
          port: 80

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: blog-test-mariadb-metrics-local-ingressroute
  namespace: blog-test
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`blog-test.${SECRET_DOMAIN_LOCAL_02}`) && PathPrefix(`/metrics`)
      kind: Rule
      services:
        - name: mariadb
          port: 9104
